[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Pause_Menu.png" type="Texture" id=1]
[ext_resource path="res://Assets/PixeloidSansBold-GOjpP.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/UI.tres" type="Theme" id=3]
[ext_resource path="res://UI/Pause_Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="Pause_Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.0
margin_top = -238.0
margin_right = 429.0
margin_bottom = 238.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Restart" type="Button" parent="."]
anchor_left = 0.495
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.88
margin_top = -50.0
margin_right = 66.0
margin_bottom = -8.0
theme = ExtResource( 3 )
text = "Restart"

[node name="Main Menu" type="Button" parent="."]
anchor_left = 0.495
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.88
margin_top = 10.0
margin_right = 66.0
margin_bottom = 52.0
theme = ExtResource( 3 )
text = "Main Menu"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.495
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.88
margin_top = 70.0
margin_right = 66.0
margin_bottom = 112.0
theme = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
